# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-09-01  Piotr Ożarowski
	* Respect medium and video codec's default value in add window (closes: #11864)
	* griffith.glade file converted to glade3 format

2007-09-01  Michael Jahn
	* Kino.de plugin updated
	* Fix encoding of --home argument

2007-09-01  Vasco Nunes
	* Several changes on loan e-mail reminder system:
		+ Loan E-mail reminder timeout implemented
		+ Support for TLS smtp auth handshaking
		+ Added smtp server port usage
		+ Added gmail smtp server support
	* 7arte movie plugin updated
	* Portuguese translation file updated

2007-08-31  Vasco Nunes
	* Brazilian portuguese translation file updated

2007-08-26  Piotr Ożarowski
	* Fix encoding problems in backup function

2007-08-23  Piotr Ożarowski
	* Export disc number instead of medium id in HTML export plugin

2007-08-16  Michael Jahn
	* IMDB-de plugin updated

---- 0.9.4 ---

2007-08-05  Piotr Ożarowski
	* FDb movie plugin updated

2007-08-04  Piotr Ożarowski
	* Removing tags function fixed
	* Copy all files from "data" subdirectory to the exported location in HTML export plugin
	  + add index.htm files to html_table{,s} templates
	* Fixed volume/colection loaning problem

2007-08-01  Piotr Ożarowski
	* Translation files synchronized with Rosetta
	  + new: Japanese, Russian and Turkish
	  + uptaded: Czech, Spanish, Bulgarian, Greek
	* Polish translation updated

2007-07-31  Michael Jahn
	* FilmTipset plugin added
	* OFDb movie plugin updated

2007-07-21  Piotr Ożarowski
	* Warn about problems with connecting to database (f.e. missing modules)

2007-07-09  Michael Jahn
	* toggle seen/unseen by double-clicking the icon
	* support for different database names with sqlite

2007-07-09  Piotr Ożarowski
	* posters directory problem fixed (thanks to Michael)

2007-07-06  Vasco Nunes
	* PTGate movie plugin updated

2007-07-04  Michael Jahn
	* Kino.de movie plugin updated

2007-07-03  Michael Jahn